--- a/accounts/templates/accounts/login.html
+++ b/accounts/templates/accounts/login.html
@@ -21,11 +21,11 @@
         {% endif %}
 
         <div class="mb-3">
-            <label for="id_email" class="form-label">Email</label>
-            <input type="email" name="email" id="id_email" class="form-control" required>
-            {% if form.email.errors %}
+            <label for="id_username" class="form-label">Email</label>
+            <input type="email" name="username" id="id_username" class="form-control" required>
+            {% if form.username.errors %}
                 <div class="text-danger">
-                    {% for error in form.email.errors %}
+                    {% for error in form.username.errors %}
                         <small>{{ error }}</small>
                     {% endfor %}
                 </div>
