--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -1,85 +1,109 @@
-<nav class="navbar navbar-expand-lg navbar-dark bg-primary">
+<nav class="navbar navbar-expand-lg navbar-dark bg-primary fixed-top">
     <div class="container-fluid">
         <!-- Brand/Logo -->
-        <a class="navbar-brand" href="{% url 'home' %}">Home</a>
-        
+        <a class="navbar-brand" href="{% url 'home' %}">My System</a>
+
         <!-- Toggler Button for Mobile Devices -->
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" 
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown"
                 aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
-        
+
         <!-- Navbar Content -->
         <div class="collapse navbar-collapse" id="navbarNavDropdown">
             <ul class="navbar-nav mx-auto">
                 {% if user.is_authenticated %}
-                    <!-- Management Dropdown -->
-                    <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" href="#" id="managementDropdown" role="button" 
-                           data-bs-toggle="dropdown" aria-expanded="false">
-                            Management
-                        </a>
-                        <ul class="dropdown-menu" aria-labelledby="managementDropdown">
-                            {% if permissions.can_view_companies %}
-                                <li><a class="dropdown-item" href="{% url 'companies_list' %}">Companies</a></li>
-                            {% endif %}
-                            {% if permissions.can_view_contacts %}
-                                <li><a class="dropdown-item" href="{% url 'contacts_list' %}">Contacts</a></li>
-                            {% endif %}
-                            {% if user.is_superuser %}
-                                <li><hr class="dropdown-divider"></li>
-                                <li><a class="dropdown-item" href="{% url 'invite_user' %}">Invite User</a></li>
-                            {% endif %}
-                        </ul>
-                    </li>
+                    <!-- Accounts Dropdown -->
+                    {% include 'accounts/accounts_dropdown.html' %}
 
                     <!-- Locations Dropdown -->
-                    {% if permissions.can_view_building or permissions.can_view_room or permissions.can_view_measurement %}
-                        <li class="nav-item dropdown">
-                            <a class="nav-link dropdown-toggle" href="#" id="locationsDropdown" role="button" 
-                               data-bs-toggle="dropdown" aria-expanded="false">
-                                Locations
-                            </a>
-                            <ul class="dropdown-menu" aria-labelledby="locationsDropdown">
-                                {% if permissions.can_view_building %}
-                                    <li><a class="dropdown-item" href="{% url 'building_list' %}">Buildings</a></li>
-                                {% endif %}
-                                {% if permissions.can_view_room %}
-                                    <li><a class="dropdown-item" href="{% url 'room_list' %}">Rooms</a></li>
-                                {% endif %}
-                                {% if permissions.can_view_measurement %}
-                                    <li><hr class="dropdown-divider"></li>
-                                    <li><a class="dropdown-item" href="{% url 'measurement_room_list' %}">Measurements</a></li>
-                                {% endif %}
-                            </ul>
-                        </li>
-                    {% endif %}
+                    {% include 'locations/locations_dropdown.html' %}
 
                     <!-- Inventory Dropdown -->
-                    {% if permissions.can_view_inventoryitem %}
+                    {% include 'inventory/items_dropdown.html' %}
+
+                    <!-- Methodology Dropdown -->
+                    {% include 'methodologies/methodology_dropdown.html' %}
+
+                    {% include 'maintenance/maintenance_dropdown.html' %}
+
+
+                    <!-- Maintenance Dropdown -->
+                    {% if permissions.can_view_maintenance %}
                         <li class="nav-item dropdown">
-                            <a class="nav-link dropdown-toggle" href="#" id="inventoryDropdown" role="button" 
+                            <a class="nav-link dropdown-toggle" href="#" id="maintenanceDropdown" role="button"
                                data-bs-toggle="dropdown" aria-expanded="false">
-                                Inventory
+                                Maintenance
                             </a>
-                            <ul class="dropdown-menu" aria-labelledby="inventoryDropdown">
-                                <li><a class="dropdown-item" href="{% url 'inventoryitem_list' %}">Items</a></li>
-                                <li><a class="dropdown-item" href="{% url 'inventoryitem_create' %}">Add Item</a></li>
+                            <ul class="dropdown-menu" aria-labelledby="maintenanceDropdown">
+                                <li><a class="dropdown-item" href="{% url 'maintenance_list' %}">Maintenance List</a></li>
+                                <li><a class="dropdown-item" href="{% url 'maintenance_create' %}">Create Maintenance</a></li>
+                                <li><a class="dropdown-item" href="{% url 'maintenance_calendar' %}">Calendar</a></li>
+                                <li><a class="dropdown-item" href="{% url 'maintenance_list_by_day' year=2024 month=11 day=2 %}">Today's Maintenance</a></li>
                             </ul>
                         </li>
                     {% endif %}
 
-                    <!-- Logout Link with Red Background and White Text -->
-                    <li class="nav-item">
-                        <a class="nav-link text-white bg-danger rounded px-2" href="{% url 'logout' %}">Logout</a>
-                    </li>
-                {% else %}
-                    <!-- Login Link -->
-                    <li class="nav-item">
-                        <a class="nav-link" href="{% url 'login' %}">Login</a>
-                    </li>
+                    <!-- Nonconformity Dropdown -->
+                    {% if permissions.can_view_nonconformity %}
+                        <li class="nav-item dropdown">
+                            <a class="nav-link dropdown-toggle" href="#" id="nonconformityDropdown" role="button"
+                               data-bs-toggle="dropdown" aria-expanded="false">
+                                Nonconformity
+                            </a>
+                            <ul class="dropdown-menu" aria-labelledby="nonconformityDropdown">
+                                <li><a class="dropdown-item" href="{% url 'nonconformity_list' %}">Nonconformity List</a></li>
+                                <li><a class="dropdown-item" href="{% url 'create_nonconformity' %}">Create Nonconformity</a></li>
+                            </ul>
+                        </li>
+                    {% endif %}
+
+                    <!-- Analysis Dropdown -->
+                    {% if analysis_permissions.can_view_analysis or analysis_permissions.can_view_analysisrequest or analysis_permissions.can_view_disposal or analysis_permissions.can_view_analysisapproval or analysis_permissions.can_view_receptionitem %}
+                        <li class="nav-item dropdown">
+                            <a class="nav-link dropdown-toggle" href="#" id="analysisDropdown" role="button"
+                               data-bs-toggle="dropdown" aria-expanded="false">
+                                Analysis
+                            </a>
+                            <ul class="dropdown-menu" aria-labelledby="analysisDropdown">
+                                {% if analysis_permissions.can_view_analysis %}
+                                    <li><a class="dropdown-item" href="{% url 'analysis:analysis_list' %}">Analysis List</a></li>
+                                {% endif %}
+                                {% if analysis_permissions.can_view_analysisrequest %}
+                                    <li><a class="dropdown-item" href="{% url 'analysis:analysis_request_list' %}">Analysis Requests</a></li>
+                                {% endif %}
+                                {% if analysis_permissions.can_view_disposal %}
+                                    <li><a class="dropdown-item" href="{% url 'analysis:disposal_list' %}">Disposals</a></li>
+                                {% endif %}
+                                {% if analysis_permissions.can_view_analysisapproval %}
+                                    <li><a class="dropdown-item" href="{% url 'analysis:analysis_approval_list' %}">Approvals</a></li>
+                                {% endif %}
+                                {% if analysis_permissions.can_view_receptionitem %}
+                                    <li><a class="dropdown-item" href="{% url 'analysis:reception_list' %}">Receptions</a></li>
+                                {% endif %}
+                            </ul>
+                        </li>
+                    {% endif %}
                 {% endif %}
             </ul>
+
+            <!-- Right Side Buttons -->
+            <div class="d-flex align-items-center">
+                {% if user.is_authenticated %}
+                    <!-- Toggle History Button -->
+                    {% if simple_history and simple_history|length > 0 %}
+                        <button id="toggleHistory" class="btn btn-sm btn-outline-light me-2">
+                            <i class="bi bi-clock-history"></i>
+                        </button>
+                    {% endif %}
+
+                    <!-- Logout Button -->
+                    <a class="nav-link text-white bg-danger rounded px-2" href="{% url 'accounts:logout' %}">Logout</a>
+                {% else %}
+                    <!-- Login Button -->
+                    <a class="nav-link" href="{% url 'accounts:login' %}">Login</a>
+                {% endif %}
+            </div>
         </div>
     </div>
 </nav>
